# ppm-c

./: .gitignore  CMakeLists.txt  Decoder.h  Encoder.h  README.md  Readme.md  Stream.h  definitions.h  main.cpp  ppm-c  target.zp
arithmetic/: ArithmeticCoderC.cpp  ArithmeticCoderC.h
docs/: Doxyfile
model/: node_info.h  ppm_node.cpp  ppm_node.h  ppm_tree.cpp  ppm_tree.h  table_node.h  table_tree.cpp  table_tree.h
